--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=Sweater
-spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_NAME}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=jdbc:postgresql://db:5432/sweater
+spring.datasource.username=user
+spring.datasource.password=1111
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.mustache.servlet.expose-request-attributes=true
