--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Sweater
-spring.datasource.url=jdbc:postgresql://db:5432/sweater
-spring.datasource.username=user
-spring.datasource.password=1111
+spring.datasource.url=jdbc:postgresql://db:5432/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
