--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=Sweater
-spring.datasource.url=jdbc:postgresql://db:5432/${POSTGRES_DB}
+#?????? ?? ?????
+#spring.datasource.url=jdbc:postgresql://db:5432/${POSTGRES_DB}
+# ?????? ?? ide
+spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.generate-ddl=true
